	-/spleef players - Shows status of all players in spleef.
	-/ignore - Cannot ignore ops if Server.allowIgnoreOps is false.
	-/gun - Fixed so if you have gun enabled while allowguns on your level is false, it will automatically stop.
	-/missile - Fixed so if you have missile enabled while allowguns on your level is false, it will automatically stop.
	-/throttle - Goes on a scale of 1-200 now.
-New Commands
	-/hallowguns - Toggle gun use on your home map.
-If MySQL is not configured properly the error log will also show now.
-CRITICAL: Updated minecraft.net server list heartbeat url from http://www.minecraft.net/heartbeat.jsp to https://minecraft.net/heartbeat.jsp.
	
MCDawn 1.0.1.3
-Color codes are no longer sent to IRC/Global.
-Ranking/banning 'reasons' can now be assigned.
-Updated Commands
	-/displayname - Allows up to 60 characters (including color codes), instead of just 16 now.
	-/me - Shows displayname instead of real name now.
	-/logoutmessage - Fixed error where if logouts.txt file did not exist it would throw an error.
	-/impersonate - Fixed bug where if message is not given it throws an error.
	-/banip - Fixed small bug where when a user xbans a player, the ip-ban would kick the player instead of the xban message.
	-/hzone del - Works as intended now.
	-/setrank <player> <rank> [reason] - Now saves reasons for rankings.
	-/ban - Now saves reasons for bannings.
	-/whois - Displays last rank/ban reason given.
	-/whowas - Displays lat rank/ban reason given.
	-/ban - Works as intended from Console.
	-/xban - Works as intended from Console.
	-/undo <player> all - Works as intended from Console.
	-/copylvl - Now sends a confirmation message after level is copied.
	-/logsearch - Term searched no longer needs to match case.
	-/abort - If a cuboid or building command is going on, you can now stop it with abort.